[tool.poetry]
name = "narmock"
version = "0.2.13"
description = "A minimal mocking utility for C projects."
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/narmock"
repository = "https://github.com/vberlier/narmock"
documentation = "https://github.com/vberlier/narmock"

readme = "README.md"

keywords = [
  "c",
  "mocking",
  "tests",
  "narwhal",
]

[tool.poetry.dependencies]
python = "^3.7"
pycparser = "^2.21"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.scripts]
narmock = 'narmock.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
