[tool.poetry]
name = "narmock"
version = "0.2.14"
description = "A minimal mocking utility for C projects."
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/narmock"
repository = "https://github.com/vberlier/narmock"
documentation = "https://github.com/vberlier/narmock"

readme = "README.md"

keywords = [
  "c",
  "mocking",
  "tests",
  "narwhal",
]

[tool.poetry.dependencies]
python = "^3.7"
pycparser = "^2.21"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
python-semantic-release = "^7.23.0"

[tool.poetry.scripts]
narmock = 'narmock.cli:main'

[tool.semantic_release]
branch = "main"
version_variable = ["narmock/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
